# wagecalculator.github.io

./: Cargo.toml  LICENSE-MIT  README.md  build.sh  index.html  index.scss  package-lock.json  package.json  package.json.local
.github/workflows/: pr_check.yml
docs/: body.html  index-22ce3f27b6b994e5.css  index-2f2cef9420604b6f.css  index-405ce88fe9d35a07.css  index-7a737692a17dd2b6.css  index-a1fc1a413a22948e.css  index-a386bae11fa728fc.css  index-c4d9e91a30f2c107.css  index.html  trunk-template-17f4d2ba21c0f919.js  trunk-template-17f4d2ba21c0f919_bg.wasm  trunk-template-262f0ac5314c8f6.js  trunk-template-262f0ac5314c8f6_bg.wasm  trunk-template-4d1e308f7a250681.js  trunk-template-4d1e308f7a250681_bg.wasm  trunk-template-de850cf6de9d117e.js  trunk-template-de850cf6de9d117e_bg.wasm  trunk-template-f9cf4ea6e2592b5c.js  trunk-template-f9cf4ea6e2592b5c_bg.wasm  trunk-template-fb39804b645f64bb.js  trunk-template-fb39804b645f64bb_bg.wasm
src/: app.rs  main.rs
src/app/: calc.rs
