[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.32.0", features = ["full"], optional = true }
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { version = "0.20", features = ["csr", "ssr", "hydration"] }

[features]
hydration = ["dep:tokio"]
default = []
